tests/parser-test-files/bad-files/parse-while.4.error
error: Malformed while expression
  --> test:4:29
   |
 4 |  (define f (while :label True))
   |                              ^ expected body
